# mph

./: CMakeLists.txt  Makefile  README.md  benchmark.cpp  mph  mph.cppm
.github/: README.md
.github/workflows/: build.yml  linux.yml
benchmark/: CMakeLists.txt  Makefile  benchmark.cpp  data.hpp
cmake/: AddCustomCommandOrTest.cmake
enum_to_string/: Dockerfile  Makefile  benchmark.hpp  benchmark.ipynb  boost_unordered_flat_map.cpp  frozen.cpp  if_else.cpp  map.cpp  mph.cpp  switch_case.cpp  unordered_map.cpp
example/: CMakeLists.txt  Makefile  dispatch.cpp  hello_world.cpp  mph.cpp  optional.cpp  policies.cpp
perfect_hashing/: Makefile  benchmark.hpp  boost_unordered_flat_map.cpp  frozen.cpp  gperf.cpp  if_else.cpp  map.cpp  mph.cpp  switch_case.cpp  unordered_map.cpp
string_to_enum/: Makefile  benchmark.hpp  benchmark.ipynb  boost_unordered_flat_map.cpp  frozen.cpp  gperf.cpp  if_else.cpp  map.cpp  mph.cpp  unordered_map.cpp
test/: CMakeLists.txt  Makefile  mph.cpp  ut.hpp
